fixed white spacing in inline code blocks (#17)

--- a/github-night.css
+++ b/github-night.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/kinoute/typora-github-night-theme
 Authors: Yann Defretin, GitHub Team
 Author URI: https://github.com/kinoute
 Description: Typora themes that reproduces GitHub Dark Color Schemes.
-Version: 0.6.1
+Version: 0.6.2
 Tags: dark, github, typora
 */
 
@@ -540,7 +540,6 @@ code {
     border-radius: 6px;
     font-family: "SFMono-Regular", "Fira Code", Nunito, monospace;
     line-height: 2;
-    white-space: nowrap;
 }
 
 .md-fences {
